# olgram

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  aerich.ini  docker-compose-debug.yaml  docker-compose-full.yaml  docker-compose-src.yaml  docker-compose.yaml  docker-entrypoint.sh  example.env  main.py  migrate.py  pyproject.toml  refresh_lang.sh
cert/: newcert.sh
docs/source/: about.rst  additional.rst  conf.py  developer.rst  index.rst  options.rst  quick_start.rst  templates.rst
locales/: locale.py
locales/en/LC_MESSAGES/: olgram.po
locales/uk/LC_MESSAGES/: olgram.po
locales/zh/LC_MESSAGES/: olgram.po
nginx/: Dockerfile  nginx.conf
olgram/: router.py  settings.py
olgram/commands/: admin.py  bot_actions.py  bots.py  info.py  menu.py  promo.py  start.py
olgram/migrations/: custom.py
olgram/migrations/models/: 10_20220219201520_update.sql  11_20220317080443_update.sql  12_20220329215535_update.sql  13_20220409051838_update.sql  14_20220801015243_update.sql  15_20240112035625_update.sql  16_20240112040146_update.sql  17_20240112045126_update.sql  18_20240217035146_update.sql  19_20240301193152_update.sql  1_20210911011051_None.sql  20_20240301215418_update.sql  21_20240301222228_update.sql  22_20240317143246_update.sql  24_20240322034823_update.sql  25_20240317143246_update.sql  2_20210911182503_update.sql  3_20210917115559_update.sql  4_20210926165918_update.sql  5_20210926185420_update.sql  (+4 more)
olgram/models/: models.py
olgram/utils/: crypto.py  mix.py  permissions.py
server/: custom.py  inlines.py  server.py
